[package]
name = "dla"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/dla-rs"
description = "Diffusion-limited aggregation for Rust"
keywords = ["fractal"]
include = ["src/*.rs", "examples/*.rs", "Cargo.toml", "README.md", "LICENSE", "images/dla.png"]

[dependencies]

image = "0.6.1"
rand = "0.3"

[dev-dependencies]
pcg = { git = "https://github.com/codahale/pcg.git" }
