[package]
name = "dla"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/dla-rs"
description = "Diffusion-limited aggregation for Rust"
keywords = ["fractal"]
include = ["src/*.rs", "examples/*.rs", "Cargo.toml", "README.md", "LICENSE", "images/dla.png"]
edition = "2021"

[dependencies]
image = "0.25.1"
rand = "0.8.5"

[dev-dependencies]
bevy_rand = "0.5"
bevy_prng = { version = "0.5", features = ["wyrand"] }
